--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,23 @@
     <title>Taco Time</title>
   </head>
   <body>
-    {{{body}}}
+    <div class="container text-center">
+      <h1>Taco Time</h1>
+      <img id= "tacoImg" src="assets/img/taco.png" alt="taco">
+      {{{body}}}
+      <form>
+        <div class="form-row justify-content-center">
+          <div class="col-4">
+            <label class="sr-only" for="inlineFormInput">Taco</label>
+            <input type="text" class="form-control mb-2" id="tacoForm">
+          </div>
+          <div class="col-auto">
+            <button id="tacoSubmit" type="submit" class="btn btn-secondary mb-2">Submit</button>
+          </div>
+        </div>
+        <p>Add your favorite taco so you can eat it!</p>
+      </form>
+    </div>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
